# fake-news-detector-summarizer

./: .gitignore  README.md  fake_news_detector+summarizer.ipynb  main.py  pyproject.toml  requirements.txt  scaler.pkl  vectorizer.pkl
static/: script.js  styles.css
templates/: index.html
