[project]
name = "fake-news-detector-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "scikit-learn",
    "nltk",
    "pandas",
    "numpy",
    "transformers",
    "torch",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
